--- a/app/styles/sign-up-membership.scss
+++ b/app/styles/sign-up-membership.scss
@@ -121,6 +121,52 @@ $background-color: rgba(247,247,247,1);
         align-items: flex-start;
         margin-top: -2vw;*/
 
+        .payment-review-description {
+          padding-top: 15px;
+
+          h1 {
+            height: 100%;
+            font-family: 'BebasNeue-Bold';
+            font-size: 3vw;
+            color: black;
+            width: 95%;
+          }
+        }
+
+        .product-title, .product-price {
+          margin-top: 15px;
+          margin-bottom: 15px;
+          width: 50%;
+          h1 {
+            height: 100%;
+            font-family: 'aleo-regular-webfont';
+            font-size: 1.7vw;
+            color: black;
+            width: 100%;
+          }
+
+          h2 {
+            // height: 100%;
+            font-family: 'aleo-regular-webfont';
+            font-size: 1vw;
+            color: black;
+            margin-top: 15px;
+            // width: 100%;
+          }
+        }
+
+         .product-price {
+           h1 {
+             text-align: right;
+           }
+         }
+
+        .header-divider{
+          height: 0.5px;
+          opacity: 0.3;
+          width: 50vw;
+          background: #979797;
+        }
 
         md-input-container.md-default-theme.md-input-invalid .md-input, md-input-container.md-input-invalid .md-input{
           /*border-color: red;
@@ -379,6 +425,22 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
 
             }
           }
+          form {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+          }
+          h4{
+            text-align: center;
+            // font-family: 'BebasNeue-Bold';
+            font-size: 0.9vw;
+            // color: white;
+            color: #1c1c1c;
+            width: 80%;
+            margin-top: 1%;
+            text-align: left;
+            line-height: 1.4vw;
+          }
 
           md-input-container.md-default-theme.md-input-invalid .md-input, md-input-container.md-input-invalid .md-input{
             border-color: red;
@@ -416,6 +478,8 @@ _:-webkit-full-screen:not(:root:root), .advantage-do-it-buttom-background-border
               -webkit-box-shadow: 0 0 0px 0px $background-color inset;
               transition: background-color 5000s ease-in-out 0s;
               border-bottom: 0.5px solid #979797;
+
+
             }
           }
 
