Adding api backend integration

--- a/app/templates/components/sign-up-membership-detail-container.hbs
+++ b/app/templates/components/sign-up-membership-detail-container.hbs
@@ -53,11 +53,11 @@
                   </div>
 
                   <div class="form-field-medium">
-                      {{paper-input label="*Número" value=number onChange=(action (mut number)) customValidations=clearFieldValidation}}
+                      {{paper-input label="*Código Postal*" value=zipCode onChange=(action (mut zipCode)) }}
                   </div>
 
                   <div class="form-field-medium">
-                      {{paper-input label="*Complemento" value=complement onChange=(action (mut complement)) }}
+                      {{paper-input label="*Número" value=number onChange=(action (mut number)) customValidations=clearFieldValidation}}
                   </div>
 
                   <div class="form-field-medium">
@@ -146,7 +146,7 @@
               </div>
               <div class="header-divider"> </div>
               <div class="product-title">
-                <h1> MEMBERSHIP </h1> 
+                <h1> MEMBERSHIP </h1>
                 <h2> Será cobrado hoje </h2>
 
               </div>
