Finishing download app page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,6 +44,7 @@
 @import 'blog';
 @import 'visit-us';
 @import 'navbar-responsive-mobile';
+@import "registerd-download-app-container";
 
 html, body{
   height: 100%; margin: 0px; padding: 0px; width: 100%;
