--- a/app/templates/sign-up-membership.hbs
+++ b/app/templates/sign-up-membership.hbs
@@ -1,6 +1,6 @@
 <div class="sign-up-membership">
 
     {{top-bar/nav-bar-control}}
-    {{sign-up-membership-detail-container}}
+    {{sign-up-membership-detail-container showDownloadAppPage=showDownloadAppPage}}
     {{bottom-bar/bottom-bar backgroundColor="#D8AD09" }}
 </div>
