--- a/app/styles/bottom-bar.scss
+++ b/app/styles/bottom-bar.scss
@@ -149,7 +149,7 @@
   .bottom-opnion-container {
        display: block;
        z-index: 99;
-
+       
        .background-footer-left{
 
               margin-top: 7vw;
@@ -209,7 +209,7 @@
               h2 {
                  font-family: 'BebasNeue-Regular';
                  font-size: 1.5vw;
-                 color: white;
+                 color: black;
                  //background: red;
                  width: 100%;
                  &:hover {
@@ -226,7 +226,7 @@
                h3 {
                  font-family: 'BebasNeue-Regular';
                  font-size: 1.5vw;
-                 color: white;
+                 color: black;
                  //background: red;
                  width: 100%;
                }
