Adding cep autocomplete

--- a/app/templates/components/sign-up-membership-detail-container.hbs
+++ b/app/templates/components/sign-up-membership-detail-container.hbs
@@ -53,7 +53,7 @@
                   </div>
 
                   <div class="form-field-medium">
-                      {{paper-input label="*Código Postal*" value=zipCode onChange=(action (mut zipCode)) }}
+                      {{paper-input label="*CEP" value=zipCode onChange=(action (mut zipCode)) focusOut=(action autoCompleteAddressAction)}}
                   </div>
 
                   <div class="form-field-medium">
